--- a/hlsdbg/resources/app/index.html
+++ b/hlsdbg/resources/app/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="static/lib/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="left" id="dirs"></div>
+    <!--div class="left" id="dirs"></div-->
     <div class="right">
         <div class="panel" id="files_panel">
-            <div class="chart_title">Files repartition</div>
+            <div class="chart_title">hello world</div>
             <div id="files"></div>
         </div>
     </div>
