多行列布局ok

--- a/hlsdbg/resources/app/index.html
+++ b/hlsdbg/resources/app/index.html
@@ -10,11 +10,29 @@
 </head>
 <body>
     <!--div class="left" id="dirs"></div-->
-    <div class="right">
+    <!--div class="right">
         <div class="panel" id="files_panel">
             <div class="chart_title">hello world</div>
             <div id="files"></div>
         </div>
+    </div-->
+    <div>
+        <div style="float:left" class="panel" id="files_panel">
+            <div class="chart_title">hello worlddddddddddd</div>
+            <div id="files"></div>
+        </div>
+        <div style="float:left" class="panel" id="c2"> 
+            <div class="chart_title">hello world</div>
+            <div id="files"></div>
+        </div>
+        <div style="float:left" class="panel" id="c3"> ccc </div>
+        <div style="float:left" class="panel" id="c4"> ddd </div>
+    </div>
+    <div style="clear:both">
+        <div style="float:left" class="panel" id="files_panel"> 111</div>
+        <div style="float:left" class="panel" id="files_panel"> 222 </div>
+        <div style="float:left" class="panel" id="files_panel"> 333 </div>
+        <div style="float:left" class="panel" id="files_panel"> 444 </div>
     </div>
     <script src="static/js/index.js"></script>
     <script src="static/lib/astiloader/astiloader.js"></script>
