删除无用代码，批量创建折线图

--- a/hlsdbg/resources/app/index.html
+++ b/hlsdbg/resources/app/index.html
@@ -9,30 +9,20 @@
     <link rel="stylesheet" href="static/lib/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <!--div class="left" id="dirs"></div-->
-    <!--div class="right">
-        <div class="panel" id="files_panel">
-            <div class="chart_title">hello world</div>
-            <div id="files"></div>
-        </div>
-    </div-->
     <div>
-        <div style="float:left" class="panel" id="files_panel">
-            <div class="chart_title">hello worlddddddddddd</div>
-            <div id="files"></div>
-        </div>
-        <div style="float:left" class="panel" id="c2"> 
-            <div class="chart_title">hello world</div>
-            <div id="files"></div>
-        </div>
-        <div style="float:left" class="panel" id="c3"> ccc </div>
-        <div style="float:left" class="panel" id="c4"> ddd </div>
+        <div style="float:left" class="panel" id="c00"> aaa </div>
+        <div style="float:left" class="panel" id="c01"> bbb </div>
+        <div style="float:left" class="panel" id="c02"> ccc </div>
     </div>
     <div style="clear:both">
-        <div style="float:left" class="panel" id="files_panel"> 111</div>
-        <div style="float:left" class="panel" id="files_panel"> 222 </div>
-        <div style="float:left" class="panel" id="files_panel"> 333 </div>
-        <div style="float:left" class="panel" id="files_panel"> 444 </div>
+        <div style="float:left" class="panel" id="c10"> 111</div>
+        <div style="float:left" class="panel" id="c11"> 222 </div>
+        <div style="float:left" class="panel" id="c12"> 333 </div>
+    </div>
+    <div style="clear:both">
+        <div style="float:left" class="panel" id="c20"> 111</div>
+        <div style="float:left" class="panel" id="c21"> 222 </div>
+        <div style="float:left" class="panel" id="c22"> 333 </div>
     </div>
     <script src="static/js/index.js"></script>
     <script src="static/lib/astiloader/astiloader.js"></script>
