使用实际数据

--- a/hlsdbg/resources/app/index.html
+++ b/hlsdbg/resources/app/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div>
-        <div style="float:left" class="panel" id="c00"> aaa </div>
-        <div style="float:left" class="panel" id="c01"> bbb </div>
-        <div style="float:left" class="panel" id="c02"> ccc </div>
+        <div style="float:left" class="panel" id="c00"> 下载ts耗时 </div>
+        <div style="float:left" class="panel" id="c01"> ts大小 </div>
+        <div style="float:left" class="panel" id="c02"> ts时长 </div>
     </div>
     <div style="clear:both">
-        <div style="float:left" class="panel" id="c10"> 111</div>
-        <div style="float:left" class="panel" id="c11"> 222 </div>
-        <div style="float:left" class="panel" id="c12"> 333 </div>
+        <div style="float:left" class="panel" id="c10"> ts帧数量</div>
+        <div style="float:left" class="panel" id="c11"> bitrate </div>
+        <div style="float:left" class="panel" id="c12"> fps </div>
     </div>
     <div style="clear:both">
-        <div style="float:left" class="panel" id="c20"> 111</div>
-        <div style="float:left" class="panel" id="c21"> 222 </div>
+        <div style="float:left" class="panel" id="c20"> sequence更新间隔</div>
+        <div style="float:left" class="panel" id="c21"> 时间戳曲线 </div>
         <div style="float:left" class="panel" id="c22"> 333 </div>
     </div>
     <script src="static/js/index.js"></script>
